refactor: test case

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
       "Wolat\\": "src/core"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Wolat\\Tests\\": "tests/"
+    }
+  },
   "config": {
     "allow-plugins": {
       "pestphp/pest-plugin": true,
